# TinyASM

./: .gitignore  CMakeLists.txt  Makefile  README.md  setup.py
.circleci/: config.yml
tests/: test_linesmoother.py  test_star_pc.py
tinyasm/: matinvert.cpp  tinyasm.cpp
